# backend-reqpalv1

./: .env.template  .gitignore  Dockerfile  README.md  appv1.py  main.py  mypy.ini  pyproject.toml  requirements.txt
app/agents/: resume_processor.py
app/api/v1/: router.py
app/api/v1/routes/: resume_filter.py
app/cli/: repl.py
app/cli/commands/: process_pdf.py  process_resume.py
app/documents/: base.py  job_description.py  resume.py
app/firebase/: client.py  upload_resume.py
app/intelligence/: client.py
app/models/: resume.py  resume_score.py
app/resume_scorer/: Readme.md  resume_scorer.py
app/tools/: pdf_extractor.py  resume_scorer.py
app/utils/: hash_utils.py  setup_logging.py  temp_file_manager.py
tests/app/: test_client.py
